RDF traversion and inspection