@@ -2,6 +2,7 @@ package com.misset.opp.odt.psi.impl.resolvable.queryStep;
 
 import com.intellij.lang.ASTNode;
 import com.misset.opp.ttl.OppModel;
+import org.apache.jena.ontology.OntClass;
 import org.apache.jena.ontology.OntResource;
 import org.apache.jena.rdf.model.Property;
 import org.jetbrains.annotations.NotNull;
@@ -27,11 +28,12 @@ public abstract class ODTResolvableQueryForwardStep extends ODTResolvableUriStep
         final OppModel model = OppModel.INSTANCE;
         if (isRootStep()) {
             // when the path start with a root curie, resolve the curie and return it:
-            return Set.of(model.getClass(fullyQualifiedUri));
+            final OntClass aClass = model.getClass(fullyQualifiedUri);
+            return aClass != null ? Set.of(aClass) : Collections.emptySet();
         } else {
             // resolve the previous step and use the current curie to traverse the model
-            final Property property = model.createProperty(fullyQualifiedUri);
-            return model.listObjects(resolvePreviousStep(), property);
+            final Property property = model.getProperty(fullyQualifiedUri);
+            return property != null ? model.listObjects(resolvePreviousStep(), property) : Collections.emptySet();
         }
     }
 }
